--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="unlock_bg">#4d1e2327</color>
+    <color name="seekbar_progess_color">#1E90FF</color>
+    <color name="elv_bg">#808080</color>
+    <color name="elv_unselected_text">#808080</color>
+    <color name="elv_selected_text">@android:color/white</color>
+    <color name="black">@android:color/black</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+
     <color name="white">#FFFFFFFF</color>
 </resources>
