progress bar issue resolved 04 July 2022

--- a/app/src/main/res/layout/player_layout.xml
+++ b/app/src/main/res/layout/player_layout.xml
@@ -10,7 +10,8 @@
         android:id="@+id/videoPlayer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:controller_layout_id="@layout/exo_playback_control_view" />
+        app:controller_layout_id="@layout/exo_playback_control_view"
+        app:resize_mode="fill" />
 
     <LinearLayout
         android:id="@+id/errorRetryLayout"
