--- a/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/app/src/main/res/layout/exo_playback_control_view.xml
@@ -100,57 +100,45 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true">
 
-        <ImageButton
+        <ImageView
             android:id="@+id/speed_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:background="@android:color/transparent"
-            android:minWidth="32dp"
-            android:minHeight="48dp"
-            android:src="@drawable/ic_baseline_slow_motion_video_24"/>
+            android:layout_gravity="center"
+            android:src="@drawable/speed"/>
 
-        <ImageButton
+        <ImageView
             android:id="@+id/settings_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
+            android:layout_gravity="center"
             android:background="@android:color/transparent"
-            android:minWidth="32dp"
-            android:minHeight="48dp"
-            android:src="@drawable/ic_baseline_settings_24" />
+            android:src="@drawable/menu" />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/picture_in_picture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginEnd="8dp"
+            android:layout_gravity="center_vertical"
             android:layout_marginBottom="8dp"
             android:background="@android:color/transparent"
-            android:minWidth="32dp"
-            android:minHeight="48dp"
             android:src="@drawable/ic_baseline_picture_in_picture_alt_24"/>
 
-        <ImageButton
+        <ImageView
             android:id="@+id/enter_full_screen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:background="@android:color/transparent"
-            android:minWidth="32dp"
-            android:minHeight="48dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="8dp"
             android:src="@drawable/ic_baseline_fullscreen_24" />
-
-        <ImageButton
-            android:id="@+id/exit_full_screen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:visibility="gone"
-            android:minWidth="32dp"
-            android:minHeight="48dp"
-            android:src="@drawable/ic_baseline_fullscreen_exit_24" />
 
 
     </LinearLayout>
