progress bar issue resolved 04 July 2022

--- a/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/app/src/main/res/layout/exo_playback_control_view.xml
@@ -26,56 +26,59 @@
         android:layout_centerInParent="true"
         android:orientation="horizontal">
 
-        <ImageButton
+        <ImageView
             android:id="@id/exo_prev"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:background="@android:color/transparent"
-            android:minWidth="32dp"
-            android:minHeight="48dp"
-            android:src="@drawable/ic_baseline_skip_previous_24" />
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/pervious" />
 
-        <ImageButton
+        <ImageView
             android:id="@id/exo_rew"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:background="@android:color/transparent"
-            android:minWidth="48dp"
-            android:minHeight="48dp"
-            android:src="@drawable/ic_baseline_replay_10_24" />
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/backward" />
 
-        <ImageButton
+        <ImageView
             android:id="@id/exo_play"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:background="@android:color/transparent"
-            android:src="@drawable/ic_baseline_play_circle_outline_24" />
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/play" />
 
-        <ImageButton
+        <ImageView
             android:id="@id/exo_pause"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:background="@android:color/transparent"
-            android:src="@drawable/ic_baseline_pause_circle_outline_24" />
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/pause" />
 
-        <ImageButton
+        <ImageView
             android:id="@id/exo_ffwd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:background="@android:color/transparent"
-            android:minWidth="48dp"
-            android:minHeight="48dp"
-            android:src="@drawable/ic_baseline_forward_10_24"/>
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/forward"/>
 
-        <ImageButton
+        <ImageView
             android:id="@id/exo_next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:background="@android:color/transparent"
-            android:minWidth="32dp"
-            android:minHeight="48dp"
-            android:src="@drawable/ic_baseline_skip_next_24"/>
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/next"/>
 
     </LinearLayout>
 
