--- a/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/app/src/main/res/layout/exo_playback_control_view.xml
@@ -21,6 +21,7 @@
 
 
     <LinearLayout
+        android:id="@+id/centerButtonLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -33,6 +34,7 @@
             android:background="@android:color/transparent"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
+            android:visibility="gone"
             android:src="@drawable/pervious" />
 
         <ImageView
@@ -41,7 +43,7 @@
             android:layout_height="32dp"
             android:background="@android:color/transparent"
             android:layout_gravity="center_vertical"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="15dp"
             android:src="@drawable/backward" />
 
         <ImageView
@@ -50,7 +52,7 @@
             android:layout_height="32dp"
             android:background="@android:color/transparent"
             android:layout_gravity="center_vertical"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="15dp"
             android:src="@drawable/play" />
 
         <ImageView
@@ -59,7 +61,7 @@
             android:layout_height="32dp"
             android:background="@android:color/transparent"
             android:layout_gravity="center_vertical"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="15dp"
             android:src="@drawable/pause" />
 
         <ImageView
@@ -78,18 +80,10 @@
             android:background="@android:color/transparent"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
+            android:visibility="gone"
             android:src="@drawable/next"/>
 
     </LinearLayout>
-
-
-
-
-
-
-
-
-
 
 
 
@@ -161,6 +155,7 @@
             android:includeFontPadding="false"
             android:paddingLeft="4dp"
             android:paddingRight="4dp"
+            android:layout_gravity="center_vertical"
             android:textColor="#FFBEBEBE"
             android:textSize="14sp"
             android:textStyle="bold" />
@@ -209,6 +204,7 @@
             android:paddingLeft="4dp"
             android:paddingRight="4dp"
             android:textColor="#FFBEBEBE"
+            android:layout_gravity="center_vertical"
             android:textSize="14sp"
             android:textStyle="bold" />
 
