preview seekbar implemented 4 July 2022

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
 <resources>
 
     <dimen name="button_size">80dp</dimen>
+    <dimen name="video_frame_width">2dp</dimen>
+    <dimen name="previewseekbar_indicator_width">16dp</dimen>
+    <dimen name="previewseekbar_thumb_offset">10dp</dimen>
 </resources>
