--- a/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/app/src/main/res/layout/exo_playback_control_view.xml
@@ -15,6 +15,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_gravity="bottom"
     android:background="#CC000000"
     android:layoutDirection="ltr">
@@ -31,89 +33,85 @@
             android:id="@id/exo_prev"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:background="@android:color/transparent"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
-            android:visibility="gone"
-            android:src="@drawable/pervious" />
+            android:background="@android:color/transparent"
+            android:src="@drawable/pervious"
+            android:visibility="gone" />
 
         <ImageView
             android:id="@id/exo_rew"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:background="@android:color/transparent"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="15dp"
+            android:background="@android:color/transparent"
             android:src="@drawable/backward" />
 
         <ImageView
             android:id="@id/exo_play"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:background="@android:color/transparent"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="15dp"
+            android:background="@android:color/transparent"
             android:src="@drawable/play" />
 
         <ImageView
             android:id="@id/exo_pause"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:background="@android:color/transparent"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="15dp"
+            android:background="@android:color/transparent"
             android:src="@drawable/pause" />
 
         <ImageView
             android:id="@id/exo_ffwd"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:background="@android:color/transparent"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
-            android:src="@drawable/forward"/>
+            android:background="@android:color/transparent"
+            android:src="@drawable/forward" />
 
         <ImageView
             android:id="@id/exo_next"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:background="@android:color/transparent"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
-            android:visibility="gone"
-            android:src="@drawable/next"/>
+            android:background="@android:color/transparent"
+            android:src="@drawable/next"
+            android:visibility="gone" />
 
     </LinearLayout>
-
-
-
 
 
     <LinearLayout
         android:id="@+id/ll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true">
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/speed_btn"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@android:color/transparent"
             android:layout_gravity="center"
-            android:src="@drawable/speed"/>
+            android:layout_marginEnd="8dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/speed" />
 
         <ImageView
             android:id="@+id/settings_btn"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
             android:layout_gravity="center"
+            android:layout_marginEnd="8dp"
             android:background="@android:color/transparent"
             android:src="@drawable/menu" />
 
@@ -121,20 +119,18 @@
             android:id="@+id/picture_in_picture"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginEnd="8dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
             android:background="@android:color/transparent"
-            android:src="@drawable/ic_baseline_picture_in_picture_alt_24"/>
+            android:src="@drawable/ic_baseline_picture_in_picture_alt_24" />
 
         <ImageView
             android:id="@+id/enter_full_screen"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:background="@android:color/transparent"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="8dp"
+            android:background="@android:color/transparent"
             android:src="@drawable/ic_baseline_fullscreen_24" />
 
 
@@ -152,61 +148,97 @@
             android:id="@id/exo_position"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:includeFontPadding="false"
             android:paddingLeft="4dp"
             android:paddingRight="4dp"
-            android:layout_gravity="center_vertical"
             android:textColor="#FFBEBEBE"
             android:textSize="14sp"
+            tools:text="3.00"
             android:textStyle="bold" />
 
-        <!--        <LinearLayout
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"
             android:orientation="vertical">
 
             <FrameLayout
-                android:id="@+id/previewFrameLayout"
-                android:layout_width="160dp"
-                android:layout_height="90dp"
-                android:background="@drawable/video_frame">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-                <ImageView
-                    android:id="@+id/imageView"
+                <LinearLayout
+                    android:id="@id/video_progress_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+
+                    <FrameLayout
+                        android:id="@+id/previewFrameLayout"
+                        android:layout_width="120dp"
+                        android:layout_height="70dp"
+                        android:visibility="gone"
+                        android:background="@drawable/video_frame">
+
+                        <ImageView
+                            android:id="@+id/previewImageView"
+                            android:layout_width="120dp"
+                            android:layout_height="70dp"
+                            />
+
+                    </FrameLayout>
+
+                    <com.multitv.ott.multitvvideoplayer.timebar.PreviewTimeBar
+                        android:id="@+id/exo_progress"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp"
+                        app:previewAnimationEnabled="true"
+                        app:previewFrameLayout="@id/previewFrameLayout"/>
+
+                    <!--
+                                        <com.android.playersdk.customview.DefaultTimeBar
+                                            android:id="@id/exo_progress"
+                                            android:layout_width="0dp"
+                                            android:layout_height="wrap_content"
+                                            android:layout_weight="1"
+                                            app:bar_height="3dp"
+                                            app:buffered_color="#80FFFFFF"
+                                            app:scrubber_enabled_size="15dp"
+                                            app:scrubber_disabled_size="15dp"
+                                            app:played_color="@android:color/white"
+                                            app:scrubber_color="@android:color/white" />
+                    -->
+
+                </LinearLayout>
+
+
+
 
             </FrameLayout>
 
-            <com.github.rubensousa.previewseekbar.exoplayer.PreviewTimeBar
-                android:id="@+id/exo_progress"
-                android:layout_width="match_parent"
-                android:layout_height="26dp"
-                android:layout_weight="1"
-                app:previewAnimationEnabled="true"
-                app:previewFrameLayout="@id/previewFrameLayout"/>
-    </LinearLayout>
--->
 
-        <com.google.android.exoplayer2.ui.DefaultTimeBar
-            android:id="@id/exo_progress"
-            android:layout_width="0dp"
-            android:layout_height="26dp"
-            android:layout_weight="1" />
+
+        </LinearLayout>
 
 
         <TextView
             android:id="@id/exo_duration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:includeFontPadding="false"
             android:paddingLeft="4dp"
+            tools:text="3.00"
             android:paddingRight="4dp"
             android:textColor="#FFBEBEBE"
-            android:layout_gravity="center_vertical"
             android:textSize="14sp"
             android:textStyle="bold" />
+
 
     </LinearLayout>
 
