--- a/app/src/main/res/layout/track_selection_dialog_layout.xml
+++ b/app/src/main/res/layout/track_selection_dialog_layout.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:text="Video Quality"
         android:textSize="16sp"
+        android:textStyle="bold"
         android:textColor="@color/black"
         android:layout_margin="16dp"
         />
@@ -35,8 +36,9 @@
             android:layout_height="wrap_content"
             android:text="Cancel"
             android:padding="8dp"
+            android:textStyle="bold"
             android:layout_marginEnd="8dp"
-            android:textColor="@color/purple_500"
+            android:textColor="@color/black"
             android:textAllCaps="true"/>
 
         <TextView
@@ -44,8 +46,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Okay"
+            android:textStyle="bold"
             android:padding="8dp"
-            android:textColor="@color/purple_500"
+            android:textColor="@color/black"
             android:textAllCaps="true"/>
 
     </LinearLayout>
