--- a/app/src/main/res/layout/track_selection_dialog_layout.xml
+++ b/app/src/main/res/layout/track_selection_dialog_layout.xml
@@ -16,12 +16,11 @@
         android:layout_margin="16dp"
         />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/quality_recycler_view"
+    <RadioGroup
+        android:id="@+id/quality_radio_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        android:orientation="vertical"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
