--- a/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/app/src/main/res/layout/exo_playback_control_view.xml
@@ -137,7 +137,7 @@
     </LinearLayout>
 
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -155,73 +155,59 @@
             android:textColor="#FFBEBEBE"
             android:textSize="14sp"
             tools:text="3.00"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginBottom="4dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
 
         <LinearLayout
+            android:id="@id/video_progress_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="center_vertical"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            app:layout_constraintStart_toEndOf="@id/exo_position"
+            app:layout_constraintEnd_toStartOf="@id/exo_duration"
+            app:layout_constraintBottom_toBottomOf="parent">
+
 
             <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:id="@+id/previewFrameLayout"
+                android:layout_width="120dp"
+                android:layout_height="70dp"
+                android:visibility="gone"
+                android:background="@drawable/video_frame">
 
-                <LinearLayout
-                    android:id="@id/video_progress_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-
-                    <FrameLayout
-                        android:id="@+id/previewFrameLayout"
-                        android:layout_width="120dp"
-                        android:layout_height="70dp"
-                        android:visibility="gone"
-                        android:background="@drawable/video_frame">
-
-                        <ImageView
-                            android:id="@+id/previewImageView"
-                            android:layout_width="120dp"
-                            android:layout_height="70dp"
-                            />
-
-                    </FrameLayout>
-
-                    <com.multitv.ott.multitvvideoplayer.timebar.PreviewTimeBar
-                        android:id="@+id/exo_progress"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginEnd="8dp"
-                        app:previewAnimationEnabled="true"
-                        app:previewFrameLayout="@id/previewFrameLayout"/>
-
-                    <!--
-                                        <com.android.playersdk.customview.DefaultTimeBar
-                                            android:id="@id/exo_progress"
-                                            android:layout_width="0dp"
-                                            android:layout_height="wrap_content"
-                                            android:layout_weight="1"
-                                            app:bar_height="3dp"
-                                            app:buffered_color="#80FFFFFF"
-                                            app:scrubber_enabled_size="15dp"
-                                            app:scrubber_disabled_size="15dp"
-                                            app:played_color="@android:color/white"
-                                            app:scrubber_color="@android:color/white" />
-                    -->
-
-                </LinearLayout>
-
-
-
+                <ImageView
+                    android:id="@+id/previewImageView"
+                    android:layout_width="120dp"
+                    android:layout_height="70dp"
+                    />
 
             </FrameLayout>
 
+            <com.multitv.ott.multitvvideoplayer.timebar.PreviewTimeBar
+                android:id="@+id/exo_progress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                app:previewAnimationEnabled="true"
+                app:previewFrameLayout="@id/previewFrameLayout"/>
 
+            <!--
+                                <com.android.playersdk.customview.DefaultTimeBar
+                                    android:id="@id/exo_progress"
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    app:bar_height="3dp"
+                                    app:buffered_color="#80FFFFFF"
+                                    app:scrubber_enabled_size="15dp"
+                                    app:scrubber_disabled_size="15dp"
+                                    app:played_color="@android:color/white"
+                                    app:scrubber_color="@android:color/white" />
+            -->
 
         </LinearLayout>
 
@@ -234,12 +220,16 @@
             android:includeFontPadding="false"
             android:paddingLeft="4dp"
             tools:text="3.00"
+            android:layout_marginBottom="4dp"
             android:paddingRight="4dp"
             android:textColor="#FFBEBEBE"
             android:textSize="14sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
 
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
