drm sdk integrated 05 July 2022

--- a/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/app/src/main/res/layout/exo_playback_control_view.xml
@@ -173,8 +173,8 @@
 
             <FrameLayout
                 android:id="@+id/previewFrameLayout"
-                android:layout_width="120dp"
-                android:layout_height="70dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:visibility="gone"
                 android:background="@drawable/video_frame">
 
