--- a/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/app/src/main/res/layout/exo_playback_control_view.xml
@@ -54,7 +54,6 @@
             android:layout_height="32dp"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="15dp"
-            android:background="@android:color/transparent"
             android:src="@drawable/play" />
 
         <ImageView
@@ -63,7 +62,6 @@
             android:layout_height="32dp"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="15dp"
-            android:background="@android:color/transparent"
             android:src="@drawable/pause" />
 
         <ImageView
@@ -72,7 +70,6 @@
             android:layout_height="32dp"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
-            android:background="@android:color/transparent"
             android:src="@drawable/forward" />
 
         <ImageView
@@ -81,7 +78,6 @@
             android:layout_height="32dp"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
-            android:background="@android:color/transparent"
             android:src="@drawable/next"
             android:visibility="gone" />
 
@@ -94,44 +90,44 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="7dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/speed_btn"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_gravity="center"
-            android:layout_marginEnd="8dp"
+            android:layout_marginRight="10dp"
             android:background="@android:color/transparent"
             android:src="@drawable/speed" />
 
         <ImageView
             android:id="@+id/settings_btn"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_gravity="center"
-            android:layout_marginEnd="8dp"
+            android:layout_marginRight="10dp"
             android:background="@android:color/transparent"
             android:src="@drawable/menu" />
 
         <ImageView
             android:id="@+id/picture_in_picture"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginEnd="8dp"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_baseline_picture_in_picture_alt_24" />
-
-        <ImageView
-            android:id="@+id/enter_full_screen"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
             android:background="@android:color/transparent"
-            android:src="@drawable/ic_baseline_fullscreen_24" />
+            android:src="@drawable/picture_in_picture" />
+
+        <ImageView
+            android:id="@+id/enter_full_screen"
+            android:layout_width="25dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="10dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/rotate" />
 
 
     </LinearLayout>
@@ -142,7 +138,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/ll"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="2dp"
         android:orientation="vertical">
 
 
@@ -165,7 +161,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="5dp"
             app:previewAnimationEnabled="true"
             app:previewFrameLayout="@id/previewFrameLayout" />
 
@@ -193,6 +189,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:gravity="center"
+        android:layout_marginBottom="5dp"
         android:layout_marginStart="8dp"
         android:orientation="horizontal">
 
@@ -205,7 +202,7 @@
             android:paddingLeft="4dp"
             android:paddingRight="4dp"
             android:textColor="#FFBEBEBE"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -218,7 +215,7 @@
             android:includeFontPadding="false"
             android:text="/"
             android:textColor="#FFBEBEBE"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:textStyle="bold" />
 
 
@@ -231,7 +228,7 @@
             android:paddingLeft="4dp"
             android:paddingRight="4dp"
             android:textColor="#FFBEBEBE"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
