--- a/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/app/src/main/res/layout/exo_playback_control_view.xml
@@ -27,69 +27,106 @@
         android:background="#CC212121"/>
 
     <LinearLayout
-        android:id="@+id/centerButtonLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_centerInParent="true">
 
-        <ImageView
-            android:id="@id/exo_prev"
+        <ImageButton
+            android:id="@+id/exo_lock"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="10dp"
             android:background="@android:color/transparent"
-            android:src="@drawable/pervious"
+            android:paddingLeft="5dp"
+            android:visibility="gone"
+            android:layout_marginStart="20dp"
+            android:paddingRight="5dp"
+            android:src="@mipmap/lock"/>
+
+
+        <ImageButton
+            android:id="@id/exo_unlock"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="20dp"
+            android:background="@android:color/transparent"
+            android:src="@mipmap/unlock"
             android:visibility="gone" />
 
-        <ImageView
-            android:id="@id/exo_rew"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="15dp"
-            android:background="@android:color/transparent"
-            android:src="@drawable/backward" />
 
-        <ImageView
-            android:id="@id/exo_play"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="15dp"
-            android:src="@drawable/play" />
+        <LinearLayout
+            android:id="@+id/centerButtonLayout"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:id="@id/exo_pause"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="15dp"
-            android:src="@drawable/pause" />
 
-        <ImageView
-            android:id="@id/exo_ffwd"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/forward" />
+            <ImageView
+                android:id="@id/exo_prev"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="10dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/pervious"
+                android:visibility="gone" />
 
-        <ImageView
-            android:id="@id/exo_next"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/next"
-            android:visibility="gone" />
+            <ImageView
+                android:id="@id/exo_rew"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="15dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/backward" />
+
+            <ImageView
+                android:id="@id/exo_play"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="15dp"
+                android:src="@drawable/play" />
+
+            <ImageView
+                android:id="@id/exo_pause"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="15dp"
+                android:src="@drawable/pause" />
+
+            <ImageView
+                android:id="@id/exo_ffwd"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/forward" />
+
+            <ImageView
+                android:id="@id/exo_next"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/next"
+                android:visibility="gone" />
+
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
 
+
+
     <LinearLayout
-        android:id="@+id/ll"
+        android:id="@+id/videoMenuLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -141,7 +178,7 @@
         android:id="@id/video_progress_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/ll"
+        android:layout_above="@+id/videoMenuLayout"
         android:layout_marginBottom="2dp"
         android:orientation="vertical">
 
@@ -187,6 +224,7 @@
 
 
     <LinearLayout
+        android:id="@+id/durationlayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/video_progress_layout"
