--- a/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/app/src/main/res/layout/exo_playback_control_view.xml
@@ -41,7 +41,7 @@
             android:visibility="gone"
             android:layout_marginStart="20dp"
             android:paddingRight="5dp"
-            android:src="@mipmap/lock"/>
+            android:src="@drawable/lock"/>
 
 
         <ImageButton
@@ -50,7 +50,7 @@
             android:layout_height="32dp"
             android:layout_marginStart="20dp"
             android:background="@android:color/transparent"
-            android:src="@mipmap/unlock"
+            android:src="@drawable/unlock"
             android:visibility="gone" />
 
 
