--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="teal_700">#FF018786</color>
 
     <color name="white">#FFFFFFFF</color>
+    <color name="faste_red">#E31000</color>
 </resources>
