--- a/app/src/main/res/layout/exo_playback_control_view_tv.xml
+++ b/app/src/main/res/layout/exo_playback_control_view_tv.xml
@@ -89,7 +89,7 @@
                 android:src="@drawable/backward" />
 
             <ImageView
-                android:id="@+id/play"
+                android:id="@+id/exo_play"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
@@ -99,7 +99,7 @@
                 android:src="@drawable/pause" />
 
             <ImageView
-                android:id="@+id/pause"
+                android:id="@+id/exo_pause"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
