--- a/app/src/main/res/drawable/button_focus_background.xml
+++ b/app/src/main/res/drawable/button_focus_background.xml
@@ -4,7 +4,10 @@
     <stroke
         android:width="1dp"
         android:color="@color/unlock_bg" />
-
+<!--
+    <solid
+        android:color="@color/unlock_bg" />
+-->
 
     <corners android:radius="8dp" />
 
