volume button added

--- a/app/src/main/res/layout/short_video_player_layout.xml
+++ b/app/src/main/res/layout/short_video_player_layout.xml
@@ -13,7 +13,8 @@
         android:background="@color/black"
         android:clickable="true"
         android:focusable="true"
-        app:resize_mode="fill" />
+        app:use_controller="false"
+        app:resize_mode="fill" >
 
 
     <RelativeLayout
@@ -59,6 +60,7 @@
 
 
     </RelativeLayout>
+    </com.google.android.exoplayer2.ui.StyledPlayerView>
 
     <LinearLayout
         android:id="@+id/errorRetryLayout"
